egonlang-core/res/examples/valid/if_expression_unit_as_cond.eg
if (void) { 123 } else { 456 };